--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/worldads
-JWT_SECRET=your_jwt_secret_key
-NODE_ENV=development
-PORT=5000
+VITE_API_BASE_URL=https://world-backend-v1-6a037ce588aa.herokuapp.com
